tests/snapshots/snapshot__case_9_canary.snap
---
source: tests/snapshot.rs
assertion_line: 114
expression: run_result.output

---
(HOST) INFO  flashing program (2 pages / 8.00 KiB)
(HOST) INFO  success!
────────────────────────────────────────────────────────────────────────────────
ack(m=10, n=10, SP=2003bfd8)
ack(m=10, n=9, SP=20037fb8)
ack(m=10, n=8, SP=20033f98)
ack(m=10, n=7, SP=2002ff78)
ack(m=10, n=6, SP=2002bf58)
ack(m=10, n=5, SP=20027f38)
ack(m=10, n=4, SP=20023f18)
ack(m=10, n=3, SP=2001fef8)
ack(m=10, n=2, SP=2001bed8)
ack(m=10, n=1, SP=20017eb8)
ack(m=10, n=0, SP=20013e98)
ack(m=9, n=1, SP=2000fe78)
ack(m=9, n=0, SP=2000be58)
ack(m=8, n=1, SP=20007e38)
ack(m=8, n=0, SP=20003e18)
────────────────────────────────────────────────────────────────────────────────
(HOST) INFO  program has used at least 240.62/254.93 KiB (94.4%) of stack space
(HOST) WARN  data segments might be corrupted due to stack overflow
stack backtrace:
   0: HardFaultTrampoline
      <exception entry>
(HOST) WARN  call stack was corrupted; unwinding could not be completed
(HOST) ERROR the program has overflowed its stack

